# backtesting

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
DataEcho/: CMakeLists.txt  example-config.h  main.cpp
DataGenerator/: CMakeLists.txt
DataGenerator/example_data/: data_example.csv
DataGenerator/src/: example_config.h  main.cpp
DataGenerator/src/util/: command_line_util.h
DataIO/: README.md
backtesting/: main.cpp
backtesting/base/account/: account.cpp  account.hpp
backtesting/base/common_interface/: common.hpp
backtesting/base/price_history/: fear_and_greed.cpp  history_subset.hpp  price_history.cpp
backtesting/base/trade_simulator/: trade_simulator.hpp
backtesting/base/util/: quick_log.hpp
backtesting/base/util/binary_io/: binary_read_write.hpp
backtesting/execution/: simulation_executor.hpp
backtesting/logs/: simulation_log.cpp  simulation_log.hpp
backtesting/simulators/: simulator_factory.hpp
backtesting/simulators/strategy/: common_strategy_config.hpp  rebalancing_trade_simulator.cpp  rebalancing_trade_simulator.hpp  stop_trade_simulator.cpp  stop_trade_simulator.hpp
data_generator/: CMakeLists.txt  main.cpp
data_generator/src/: main.cpp
data_generator/src/binary_io/: binary_read_write.hpp
data_generator/src/legend/: main.cpp
data_generator/src/util/: cmd_line_args.hpp  util.cpp  util.h
quick_run/: README.md  quick_ohlc_generation.sh  quick_simulation.sh
result_plot/: CMakeLists.txt  evaluation_result.cpp  evaluation_result.hpp  main.cpp
src/: StockTick.h  main.cpp
src/base/: base.hpp  base_header.hpp
src/base/account/: account.cpp  account.hpp
src/base/common_interface/: common.hpp
src/base/price_history/: fear_and_greed.hpp  history_subset.hpp  price_history.cpp  price_history.hpp
src/base/trade_simulator/: trade_simulator.hpp
src/base/trader/: trade_simulator.h
src/base/util/: cmd_line_args.hpp  quick_log.hpp
src/base/util/binary_io/: binary_read_write.hpp
src/common_interface/: common.h  common.hpp
src/execution/: simulation_executor.cpp  simulation_executor.hpp  simulation_types.hpp
src/logs/: simulation_log.cpp  simulation_log.hpp
src/price_history/: price_history.cpp  price_history.hpp
src/simulators/: rebalancing_simulator.cpp  rebalancing_simulator.hpp  rebalancing_trade_simulator.cpp  simulator_factory.cpp  simulator_factory.hpp
src/simulators/strategy/: common_strategy_config.hpp  rebalancing_trade_simulator.cpp  rebalancing_trade_simulator.hpp  stop_trade_simulator.cpp  stop_trade_simulator.hpp
src/util/: maths_util.hpp
test/: CMakeLists.txt
